--- a/.github/workflows/deploy_got.yml
+++ b/.github/workflows/deploy_got.yml
@@ -34,7 +34,7 @@ jobs:
         uses: pyupio/safety-action@v1
         with:
           api-key: ${{ secrets.SAFETY_API_KEY }}
-          fail-on-severity: "high"
+          args: --full-report --fail-on=high
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
