--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,106 @@
 annotated-types==0.7.0
-antlr4-python3-runtime==4.13.2
+anyio==4.6.2.post1
+appnope==0.1.4
 asn1crypto==1.5.1
-attrs==24.2.0
-aws-sam-translator==1.92.0
-aws-xray-sdk==2.14.0
-boto3==1.35.57
-botocore==1.35.57
+asttokens==3.0.0
+Authlib==1.5.2
+boto3==1.38.5
+botocore==1.38.5
 certifi==2024.8.30
 cffi==1.17.1
-cfn-lint==1.18.4
-charset-normalizer==3.4.0
-cryptography==43.0.3
-docker==7.1.0
-graphql-core==3.2.5
+charset-normalizer==3.4.1
+click==8.1.7
+comm==0.2.2
+cryptography==44.0.2
+debugpy==1.8.11
+decorator==5.1.1
+dnspython==2.7.0
+dparse==0.6.4
+email_validator==2.2.0
+executing==2.1.0
+Faker==37.1.0
+fastapi==0.115.6
+fastapi-cli==0.0.5
+filelock==3.16.1
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.0
 idna==3.10
 iniconfig==2.0.0
-#Jinja2==3.1.4
+ipykernel==6.29.5
+ipython==8.31.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
 jmespath==1.0.1
-joserfc==1.0.0
-jsondiff==2.2.1
-jsonpatch==1.33
-jsonpath-ng==1.7.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-path==0.3.3
-jsonschema-specifications==2023.12.1
-lazy-object-proxy==1.10.0
+joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-moto==5.0.20
-mpmath==1.3.0
-multipart==1.1.0
-networkx==3.4.2
-openapi-schema-validator==0.6.2
-openapi-spec-validator==0.7.1
+marshmallow==4.0.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+moto==5.1.4
+nest-asyncio==1.6.0
+nltk==3.9.1
+numpy==2.2.1
+orjson==3.10.12
 packaging==24.2
-pandas
-pathable==0.4.3
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
 pg8000==1.31.2
+platformdirs==4.3.6
 pluggy==1.5.0
-ply==3.11
-py-partiql-parser==0.5.6
-pyarrow==18.0.0
+prompt_toolkit==3.0.48
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-partiql-parser==0.6.1
 pycparser==2.22
 pydantic==2.9.2
+pydantic-extra-types==2.10.0
+pydantic-settings==2.6.1
 pydantic_core==2.23.4
-pyparsing==3.2.0
-pytest==8.3.3
+Pygments==2.18.0
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.19
+pytz==2024.2
 PyYAML==6.0.2
-referencing==0.35.1
+pyzmq==26.2.0
 regex==2024.11.6
 requests==2.32.3
-responses==0.25.3
-rfc3339-validator==0.1.4
-rpds-py==0.21.0
-s3transfer==0.10.3
+responses==0.25.7
+rich==13.9.4
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
+s3transfer==0.12.0
+safety==3.4.0
+safety-schemas==0.0.14
 scramp==1.4.5
-setuptools==75.3.0
+shellingham==1.5.4
 six==1.16.0
-sympy==1.13.3
-SQLAlchemy
-psycopg-binary
+sniffio==1.3.1
+stack-data==0.6.3
+starlette==0.41.3
+tenacity==9.1.2
+tomlkit==0.13.2
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.15.0
 typing_extensions==4.12.2
-urllib3==2.2.3
+tzdata==2024.2
+ujson==5.10.0
+urllib3==2.3.0
+uvicorn==0.32.1
+uvloop==0.21.0
+watchfiles==1.0.0
+wcwidth==0.2.13
+websockets==14.1
 Werkzeug==3.1.3
-wrapt==1.16.0
 xmltodict==0.14.2
