--- a/.github/workflows/deploy_got.yml
+++ b/.github/workflows/deploy_got.yml
@@ -70,12 +70,13 @@ jobs:
         working-directory: terraform
         run: terraform init
 
+      - name: Write functionargs.tfvars from GitHub Secret
+        working-directory: terraform
+        run: echo "${{ secrets.FUNCTIONARGS_TFVARS }}" > functionargs.tfvars
+
       - name: Terraform Plan
         working-directory: terraform
-        env:
-          TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
-          TF_VAR_SNS_EMAIL: ${{ secrets.SNS_EMAIL }}
-        run: terraform plan
+        run: terraform plan -var-file="functionargs.tfvars"
 
       - name: Confirm Terraform Plan Before Apply
         if: github.event_name == 'workflow_dispatch'
@@ -83,7 +84,4 @@ jobs:
 
       - name: Terraform Apply
         working-directory: terraform
-        env:
-          TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
-          TF_VAR_SNS_EMAIL: ${{ secrets.SNS_EMAIL }}
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var-file="functionargs.tfvars"
